; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/miscfs/specfs/extr_spec_vnops.c_throttle_info_end_io_internal.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/miscfs/specfs/extr_spec_vnops.c_throttle_info_end_io_internal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._throttle_io_info_t = type { i64*, i32* }

@THROTTLE_LEVEL_NONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct._throttle_io_info_t*, i32)* @throttle_info_end_io_internal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @throttle_info_end_io_internal(%struct._throttle_io_info_t* %0, i32 %1) #0 {
  %3 = alloca %struct._throttle_io_info_t*, align 8
  %4 = alloca i32, align 4
  store %struct._throttle_io_info_t* %0, %struct._throttle_io_info_t** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @THROTTLE_LEVEL_NONE, align 4
  %7 = icmp eq i32 %5, %6
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  br label %34

9:                                                ; preds = %2
  %10 = load %struct._throttle_io_info_t*, %struct._throttle_io_info_t** %3, align 8
  %11 = getelementptr inbounds %struct._throttle_io_info_t, %struct._throttle_io_info_t* %10, i32 0, i32 1
  %12 = load i32*, i32** %11, align 8
  %13 = load i32, i32* %4, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds i32, i32* %12, i64 %14
  %16 = call i32 @microuptime(i32* %15)
  %17 = load %struct._throttle_io_info_t*, %struct._throttle_io_info_t** %3, align 8
  %18 = getelementptr inbounds %struct._throttle_io_info_t, %struct._throttle_io_info_t* %17, i32 0, i32 0
  %19 = load i64*, i64** %18, align 8
  %20 = load i32, i32* %4, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds i64, i64* %19, i64 %21
  %23 = call i32 @OSDecrementAtomic(i64* %22)
  %24 = load %struct._throttle_io_info_t*, %struct._throttle_io_info_t** %3, align 8
  %25 = getelementptr inbounds %struct._throttle_io_info_t, %struct._throttle_io_info_t* %24, i32 0, i32 0
  %26 = load i64*, i64** %25, align 8
  %27 = load i32, i32* %4, align 4
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds i64, i64* %26, i64 %28
  %30 = load i64, i64* %29, align 8
  %31 = icmp sge i64 %30, 0
  %32 = zext i1 %31 to i32
  %33 = call i32 @assert(i32 %32)
  br label %34

34:                                               ; preds = %9, %8
  ret void
}

declare dso_local i32 @microuptime(i32*) #1

declare dso_local i32 @OSDecrementAtomic(i64*) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
